# dod-scan

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_results.txt
docs/design-plans/: 2026-03-12-dod-scan.md
docs/implementation-plans/2026-03-12-dod-scan/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  test-requirements.md
docs/test-plans/: 2026-03-12-dod-scan.md
src/dod_scan/: __init__.py  classifier.py  classifier_prompt.py  classifier_providers.py  cli.py  config.py  db.py  export_kml.py  export_kml_build.py  export_map.py  export_map_data.py  geocoder.py  geocoder_api.py  geocoder_resolve.py  logging_config.py  parser.py  parser_extract.py  parser_fields.py  scraper.py  scraper_fetch.py  scraper_parse.py
src/dod_scan/templates/: map.html
tests/: conftest.py  test_classifier_orchestration.py  test_classifier_prompt.py  test_classifier_providers.py  test_cli.py  test_export_kml.py  test_export_kml_build.py  test_export_map.py  test_export_map_data.py  test_geocoder_api.py  test_geocoder_orchestration.py  test_geocoder_resolve.py  test_logging_config.py  test_parser_extract.py  test_parser_fields.py  test_parser_orchestration.py  test_run_all.py  test_scraper_fetch.py  test_scraper_orchestration.py  test_scraper_parse.py
tests/fixtures/: article_page.html  index_page.html  index_page_2.html
